--- a/app/src/main/res/layout/item_lottery.xml
+++ b/app/src/main/res/layout/item_lottery.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/container_card_view"
@@ -15,42 +10,57 @@
             app:cardElevation="10dp"
             app:cardCornerRadius="10dp"
             android:backgroundTint="@color/blue_boston"
-            android:layout_margin="14dp">
+            android:layout_margin="5dp">
 
             <LinearLayout
-                android:id="@+id/lottery_info_text"
-                android:orientation="vertical"
-                android:padding="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:text="Name"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/fluffy_white"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:id="@+id/lottery_info_text"
+                    android:orientation="vertical"
+                    android:padding="12dp"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
 
-                <TextView
-                    android:id="@+id/numbers"
-                    android:text="65656565"
-                    android:textSize="16sp"
-                    android:textColor="@color/fluffy_white"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/name"
+                        android:text="Name"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/fluffy_white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:id="@+id/timer"
-                    android:text="30s"
-                    android:textColor="@color/fluffy_white"
+                    <TextView
+                        android:id="@+id/numbers"
+                        android:text="65656565"
+                        android:textSize="16sp"
+                        android:textColor="@color/fluffy_white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/timer"
+                        android:text="30s"
+                        android:textColor="@color/fluffy_white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <ProgressBar
+                    android:id="@+id/progress_circular"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="15dp"
+                    android:indeterminate="true"
+                    android:indeterminateTint="@color/fluffy_white"
+                    android:indeterminateTintMode="src_in"/>
+
             </LinearLayout>
-
         </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
